<resources>
    <string name="app_name">MyLATS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="greeting">Hi </string>
    <string name="logout">Logout</string>
    <string name="deleteUser">Delete User</string>
    <string name="title_activity_heart_sensor">HeartSensor</string>
    <string name="action_settings">Settings</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_char">Unknown Characteristic</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="no_data">There is no data</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="label_state">State:</string>
    <string name="label_device_address">MAC Address:</string>
    <string name="connection_state">Disconnected</string>
    <string name="label_data">Data:</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="user_info_form_title"> PERSONAL INFORMATION </string>
    <string name="user_info_form_name"> PERSONAL NAME </string>
    <string name="user_info_form_email"> PERSONAL EMAIL </string>
    <string name="user_info_form_weight"> WEIGHT </string>
    <string name="user_info_form_age"> AGE </string>
    <string name="genderSex">Sex</string>
    <string name="genderM">Male</string>
    <string name="genderF">Female</string>
    <string name="GenderType">Select Gender</string>
    <string name="Infobutton">Add Information</string>
    <string name="ReturnMain">Return to Main Menu</string>
    <string name="title_activity_personal_info">personal_info</string>

</resources>
