<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="12pt"
        android:textStyle="bold"
        tools:text="Personal Information" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginBottom="10dp"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_info_form_name"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/user_info_form_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/EditTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/user_info_form_weight"
        android:inputType="number" />

    <EditText
        android:id="@+id/EditTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/user_info_form_age"
        android:inputType="number" />

    <Spinner
        android:id="@+id/SpinnerPersonalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/genderlist"
        android:prompt="@string/GenderType" />


    <Button
        android:id="@+id/ButtonSendInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_purple"
        android:text="@string/Infobutton"/>

    <Button
        android:id="@+id/GoBackMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ReturnMain"
        android:background="@color/colorAccent" />


</LinearLayout>
