<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/textView1"
        android:text="@string/greeting"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/deleteUser"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/deleteUser"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_bright"/>

    <Button
        android:id="@+id/logout"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/connect"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="Connect Your Device"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"/>

</LinearLayout>