<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#FFF">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:id="@+id/userEmail"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:id="@+id/userPassword"
            android:hint="@string/prompt_password" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:text="@string/action_sign_in_short"
            android:id="@+id/loginButton"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:textColor="#FFF"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <Button
        android:text="Forgot password?"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/newPasswordButton"
        android:background="@null"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="8dp"
        />
</LinearLayout>